--- a/app/src/main/res/layout/question_three.xml
+++ b/app/src/main/res/layout/question_three.xml
@@ -5,6 +5,68 @@
     android:orientation="vertical">
 
     <!--  Start : Your code should be within this block -->
+    <TextView
+        android:id="@+id/q1_title"
+        android:textColor="@color/colorTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="30sp"
+        android:layout_marginTop="50px"
+        android:layout_marginLeft="50px"
+        android:text="@string/q2_title"></TextView>
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60sp"
+        android:layout_marginRight="50sp"
+        android:layout_marginLeft="50sp"
+        android:textSize="20sp"
+        android:text="@string/q2_content"></TextView>
+    <RadioGroup
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40sp"
+        android:layout_marginLeft="100sp">
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Under 1000"
+            android:textSize="20sp"></RadioButton>
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="1000-1999"
+            android:textSize="20sp"></RadioButton>
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="2000-2999"
+            android:textSize="20sp"></RadioButton>
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="3000-3999"
+            android:textSize="20sp"></RadioButton>
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="More than 4000"
+            android:textSize="20sp"></RadioButton>
+    </RadioGroup>
+    <Button
+        android:id="@+id/wel_button"
+        android:background="@color/colorPrimary"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_below="@id/wel_li_3"
+        android:layout_marginTop="100sp"
+        android:layout_marginLeft="25sp"
+        android:layout_marginRight="25sp"
+        android:text="NEXT"
+        android:textSize="20sp"></Button>
 
 
     <!-- END    : Your code should be within this block -->
