--- a/app/src/main/res/layout/welcome.xml
+++ b/app/src/main/res/layout/welcome.xml
@@ -1,9 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/welcome"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <!--  Start : Your code should be within this block -->
+<TextView
+    android:id="@+id/wel_title"
+    android:textColor="@color/colorTitle"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:textSize="30sp"
+    android:layout_marginTop="100px"
+    android:layout_marginLeft="170px"
+    android:text="@string/welcome_title"></TextView>
+<TextView
+    android:id="@+id/wel_subtitle"
+    android:textColor="@color/colorTitle"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_below="@+id/wel_title"
+    android:layout_marginLeft="170px"
+    android:layout_marginTop="20px"
+    android:textSize="20sp"
+    android:text="@string/welcome_subtitle"></TextView>
+
+
+    <TextView
+        android:id="@+id/wel_ul"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:layout_marginTop="50sp"
+        android:layout_marginLeft="50sp"
+        android:layout_marginRight="50sp"
+        android:layout_below="@id/wel_subtitle"
+        android:text="@string/welcome_ul"
+        ></TextView>
+
+    <TextView
+        android:id="@+id/wel_li_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_marginRight="50sp"
+        android:layout_marginLeft="50sp"
+        android:layout_marginTop="20sp"
+
+
+        android:layout_below="@id/wel_ul"
+        android:text="@string/welcome_li_1"></TextView>
+    <TextView
+        android:id="@+id/wel_li_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_marginRight="50sp"
+        android:layout_marginLeft="50sp"
+        android:layout_marginTop="20sp"
+
+
+        android:layout_below="@id/wel_li_1"
+        android:text="@string/welcome_li_2"></TextView>
+
+    <TextView
+        android:id="@+id/wel_li_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_marginRight="50sp"
+        android:layout_marginLeft="50sp"
+        android:layout_marginTop="20sp"
+
+
+        android:layout_below="@id/wel_li_2"
+        android:text="@string/welcome_li_3"></TextView>
+
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/wel_li_3"
+        android:layout_marginTop="90sp"
+        android:layout_marginLeft="25sp"
+        android:layout_marginRight="25sp"
+        android:layout_centerHorizontal="true"
+        android:text="I accept these requests">
+    </CheckBox>
+
+    <Button
+        android:id="@+id/wel_button"
+        android:background="@color/colorPrimary"
+        android:layout_width="1800dp"
+        android:layout_height="80dp"
+        android:layout_below="@id/wel_li_3"
+        android:layout_marginTop="140sp"
+        android:layout_marginLeft="25sp"
+        android:layout_marginRight="25sp"
+        android:text="Let's Start!"></Button>
+
 
 
     <!-- END    : Your code should be within this block -->
