--- a/app/src/main/res/layout/question_one.xml
+++ b/app/src/main/res/layout/question_one.xml
@@ -76,7 +76,7 @@
     </RadioGroup>
 
     <Button
-        android:id="@+id/wel_button"
+        android:id="@+id/q1_button"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_below="@id/wel_li_3"
