--- a/app/src/main/res/layout/finish_survey.xml
+++ b/app/src/main/res/layout/finish_survey.xml
@@ -5,7 +5,44 @@
     android:orientation="vertical">
 
     <!--  Start : Your code should be within this block -->
+    <TextView
+        android:id="@+id/wel_title"
+        android:textColor="@color/colorTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="30sp"
+        android:layout_marginTop="100px"
+        android:layout_marginLeft="170px"
+        android:text="@string/end_title"></TextView>
+    <TextView
+        android:id="@+id/wel_subtitle"
+        android:textColor="@color/colorTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/wel_title"
+        android:layout_marginLeft="170px"
+        android:layout_marginTop="20px"
+        android:textSize="20sp"
+        android:text="@string/end_subtitle"></TextView>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="-190sp"
+        android:src="@drawable/survey_image"
+        >
 
+    </ImageView>
+    <Button
+        android:id="@+id/end_button"
+        android:background="@color/colorPrimary"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_below="@id/wel_li_3"
+        android:layout_marginTop="-240sp"
+        android:layout_marginLeft="25sp"
+        android:layout_marginRight="25sp"
+        android:text="FINISH"
+        android:textSize="20sp"></Button>
 
     <!-- END    : Your code should be within this block -->
 
