--- a/app/src/main/res/layout/question_eight.xml
+++ b/app/src/main/res/layout/question_eight.xml
@@ -5,8 +5,87 @@
     android:orientation="vertical">
 
     <!--  Start : Your code should be within this block -->
+    <TextView
+        android:id="@+id/q8_title"
+        android:textColor="@color/colorTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="30sp"
+        android:layout_marginTop="50px"
+        android:layout_marginLeft="50px"
+        android:text="@string/q8_title"></TextView>
 
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60sp"
+        android:layout_marginRight="50sp"
+        android:layout_marginLeft="50sp"
+        android:textSize="20sp"
+        android:text="@string/q8_content"></TextView>
+    <RadioGroup
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20sp"
+        android:layout_marginLeft="100sp"
+        android:layout_marginRight="50sp">
+
+
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="iphone"
+
+            android:textSize="18sp"></RadioButton>
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Nokia"
+            android:layout_marginTop="10sp"
+            android:textSize="18sp"></RadioButton>
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Samsung"
+            android:layout_marginTop="10sp"
+            android:textSize="18sp"></RadioButton>
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="MI"
+            android:layout_marginTop="10sp"
+            android:textSize="18sp"></RadioButton>
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Lenovo"
+            android:layout_marginTop="10sp"
+            android:textSize="18sp"></RadioButton>
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sony"
+            android:layout_marginTop="10sp"
+            android:textSize="18sp"></RadioButton>
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Others"
+            android:layout_marginTop="10sp"
+            android:textSize="18sp"></RadioButton>
+    </RadioGroup>
+    <Button
+        android:id="@+id/q5_button"
+        android:background="@color/colorPrimary"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_below="@id/wel_li_3"
+        android:layout_marginTop="20sp"
+        android:layout_marginLeft="25sp"
+        android:layout_marginRight="25sp"
+        android:text="NEXT"
+        android:textSize="20sp"></Button>
     <!-- END    : Your code should be within this block -->
 
 </LinearLayout>
