--- a/app/src/main/res/layout/question_six.xml
+++ b/app/src/main/res/layout/question_six.xml
@@ -5,7 +5,47 @@
     android:orientation="vertical">
 
     <!--  Start : Your code should be within this block -->
+    <TextView
+        android:id="@+id/q6_title"
+        android:textColor="@color/colorTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="30sp"
+        android:layout_marginTop="50px"
+        android:layout_marginLeft="50px"
+        android:text="@string/q6_title"></TextView>
 
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60sp"
+        android:layout_marginRight="50sp"
+        android:layout_marginLeft="50sp"
+        android:textSize="20sp"
+        android:text="@string/q6_content"></TextView>
+
+<EditText
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="20sp"
+    android:layout_marginRight="50sp"
+    android:layout_marginLeft="50sp"
+    android:textSize="20sp">
+
+</EditText>
+
+    <Button
+        android:id="@+id/q6_button"
+        android:background="@color/colorPrimary"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_below="@id/wel_li_3"
+        android:layout_marginTop="230sp"
+        android:layout_marginLeft="25sp"
+        android:layout_marginRight="25sp"
+        android:text="NEXT"
+        android:textSize="20sp"></Button>
 
     <!-- END    : Your code should be within this block -->
 
