--- a/app/src/main/res/layout/finish_survey.xml
+++ b/app/src/main/res/layout/finish_survey.xml
@@ -24,21 +24,22 @@
         android:layout_marginTop="20px"
         android:textSize="20sp"
         android:text="@string/end_subtitle"></TextView>
+
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="-190sp"
-        android:src="@drawable/survey_image"
-        >
+        android:layout_marginTop="-70sp"
+        android:src="@drawable/survey_image">
 
     </ImageView>
+
     <Button
         android:id="@+id/end_button"
         android:background="@color/colorPrimary"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         android:layout_below="@id/wel_li_3"
-        android:layout_marginTop="-240sp"
+        android:layout_marginTop="-120sp"
         android:layout_marginLeft="25sp"
         android:layout_marginRight="25sp"
         android:text="FINISH"
