--- a/app/src/main/res/layout/question_one.xml
+++ b/app/src/main/res/layout/question_one.xml
@@ -27,48 +27,56 @@
         android:textSize="20sp"></TextView>
 
     <RadioGroup
+        android:id="@+id/q1_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="100sp"
         android:layout_marginTop="40sp">
 
         <RadioButton
+            android:id="@+id/q1_group_iphone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="iPhone"
             android:textSize="20sp"></RadioButton>
 
         <RadioButton
+            android:id="@+id/q1_group_nokia"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Nokia"
             android:textSize="20sp"></RadioButton>
 
         <RadioButton
+            android:id="@+id/q1_group_samsung"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Samsung"
             android:textSize="20sp"></RadioButton>
 
         <RadioButton
+            android:id="@+id/q1_group_mi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="MI"
             android:textSize="20sp"></RadioButton>
 
         <RadioButton
+            android:id="@+id/q1_group_lenovo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Lenovo"
             android:textSize="20sp"></RadioButton>
 
         <RadioButton
+            android:id="@+id/q1_group_sony"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Sony"
             android:textSize="20sp"></RadioButton>
 
         <RadioButton
+            android:id="@+id/q1_group_others"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Others"
