all listeners done

--- a/app/src/main/res/layout/question_nine.xml
+++ b/app/src/main/res/layout/question_nine.xml
@@ -25,27 +25,32 @@
         android:textSize="20sp"
         android:text="@string/q9_content"></TextView>
     <RadioGroup
+        android:id="@+id/q9_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40sp"
         android:layout_marginLeft="100sp">
 
         <RadioButton
+            android:id="@+id/q9_group_b1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/q9_1"
             android:textSize="20sp"></RadioButton>
         <RadioButton
+            android:id="@+id/q9_group_b2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/q9_2"
             android:textSize="20sp"></RadioButton>
         <RadioButton
+            android:id="@+id/q9_group_b3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/q9_3"
             android:textSize="20sp"></RadioButton>
         <RadioButton
+            android:id="@+id/q9_group_b4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/q9_4"
