--- a/app/src/main/res/layout/question_eight.xml
+++ b/app/src/main/res/layout/question_eight.xml
@@ -25,6 +25,7 @@
         android:textSize="20sp"
         android:text="@string/q8_content"></TextView>
     <RadioGroup
+        android:id="@+id/q8_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20sp"
@@ -33,42 +34,49 @@
 
 
         <RadioButton
+            android:id="@+id/q8_group_b1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="iphone"
 
             android:textSize="18sp"></RadioButton>
         <RadioButton
+            android:id="@+id/q8_group_b2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Nokia"
             android:layout_marginTop="10sp"
             android:textSize="18sp"></RadioButton>
         <RadioButton
+            android:id="@+id/q8_group_b3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Samsung"
             android:layout_marginTop="10sp"
             android:textSize="18sp"></RadioButton>
         <RadioButton
+            android:id="@+id/q8_group_b4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="MI"
             android:layout_marginTop="10sp"
             android:textSize="18sp"></RadioButton>
         <RadioButton
+            android:id="@+id/q8_group_b5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Lenovo"
             android:layout_marginTop="10sp"
             android:textSize="18sp"></RadioButton>
         <RadioButton
+            android:id="@+id/q8_group_b6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Sony"
             android:layout_marginTop="10sp"
             android:textSize="18sp"></RadioButton>
         <RadioButton
+            android:id="@+id/q8_group_b7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Others"
