--- a/app/src/main/res/layout/question_eleven.xml
+++ b/app/src/main/res/layout/question_eleven.xml
@@ -25,17 +25,21 @@
         android:textSize="20sp"
         android:text="@string/q11_content"></TextView>
     <RadioGroup
+
+        android:id="@+id/q11_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40sp"
         android:layout_marginLeft="100sp">
 
         <RadioButton
+            android:id="@+id/q11_group_b1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/q11_1"
             android:textSize="20sp"></RadioButton>
         <RadioButton
+            android:id="@+id/q11_group_b2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/q11_2"
