--- a/app/src/main/res/layout/question_five.xml
+++ b/app/src/main/res/layout/question_five.xml
@@ -32,36 +32,43 @@
         android:layout_marginRight="20sp">
 
         <CheckBox
+            android:id="@+id/q5_group_c1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/q4_1"
             android:textSize="18sp"></CheckBox>
         <CheckBox
+            android:id="@+id/q5_group_c2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/q4_2"
             android:textSize="18sp"></CheckBox>
         <CheckBox
+            android:id="@+id/q5_group_c3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/q4_3"
             android:textSize="18sp"></CheckBox>
         <CheckBox
+            android:id="@+id/q5_group_c4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/q4_4"
             android:textSize="18sp"></CheckBox>
         <CheckBox
+            android:id="@+id/q5_group_c5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/q4_5"
             android:textSize="18sp"></CheckBox>
         <CheckBox
+            android:id="@+id/q5_group_c6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/q4_6"
             android:textSize="18sp"></CheckBox>
         <CheckBox
+            android:id="@+id/q5_group_c7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/q4_7"
