--- a/app/src/main/res/layout/question_seven.xml
+++ b/app/src/main/res/layout/question_seven.xml
@@ -26,6 +26,7 @@
         android:text="@string/q7_content"></TextView>
 
     <RadioGroup
+        android:id="@+id/q7_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40sp"
@@ -34,30 +35,35 @@
 
 
         <RadioButton
+            android:id="@+id/q7_group_b1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/q7_1"
 
             android:textSize="18sp"></RadioButton>
         <RadioButton
+            android:id="@+id/q7_group_b2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/q7_2"
             android:layout_marginTop="10sp"
             android:textSize="18sp"></RadioButton>
         <RadioButton
+            android:id="@+id/q7_group_b3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/q7_3"
             android:layout_marginTop="10sp"
             android:textSize="18sp"></RadioButton>
         <RadioButton
+            android:id="@+id/q7_group_b4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/q7_4"
             android:layout_marginTop="10sp"
             android:textSize="18sp"></RadioButton>
         <RadioButton
+            android:id="@+id/q7_group_b5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/q7_5"
