--- a/app/src/main/res/layout/question_ten.xml
+++ b/app/src/main/res/layout/question_ten.xml
@@ -25,27 +25,32 @@
         android:textSize="20sp"
         android:text="@string/q10_content"></TextView>
     <RadioGroup
+        android:id="@+id/q10_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40sp"
         android:layout_marginLeft="100sp">
 
         <RadioButton
+            android:id="@+id/q10_group_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/q10_1"
             android:textSize="20sp"></RadioButton>
         <RadioButton
+            android:id="@+id/q10_group_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/q10_2"
             android:textSize="20sp"></RadioButton>
         <RadioButton
+            android:id="@+id/q10_group_3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/q10_3"
             android:textSize="20sp"></RadioButton>
         <RadioButton
+            android:id="@+id/q10_group_4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/q10_4"
