--- a/app/src/main/res/layout/question_three.xml
+++ b/app/src/main/res/layout/question_three.xml
@@ -25,27 +25,32 @@
         android:textSize="20sp"
         android:text="@string/q3_content"></TextView>
     <RadioGroup
+        android:id="@+id/q3_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40sp"
         android:layout_marginLeft="100sp">
 
         <RadioButton
+            android:id="@+id/q3_group_b1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="2G"
             android:textSize="20sp"></RadioButton>
         <RadioButton
+            android:id="@+id/q3_group_b2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="3G"
             android:textSize="20sp"></RadioButton>
         <RadioButton
+            android:id="@+id/q3_group_b3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="4G"
             android:textSize="20sp"></RadioButton>
         <RadioButton
+            android:id="@+id/q3_group_b4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Others"
