--- a/app/src/main/res/layout/question_twelve.xml
+++ b/app/src/main/res/layout/question_twelve.xml
@@ -25,32 +25,38 @@
         android:textSize="20sp"
         android:text="@string/q12_content"></TextView>
     <RadioGroup
+        android:id="@+id/q12_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40sp"
         android:layout_marginLeft="100sp">
 
         <RadioButton
+            android:id="@+id/q12_group_b1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/q12_1"
             android:textSize="20sp"></RadioButton>
         <RadioButton
+            android:id="@+id/q12_group_b2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/q10_2"
             android:textSize="20sp"></RadioButton>
         <RadioButton
+            android:id="@+id/q12_group_b3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/q12_3"
             android:textSize="20sp"></RadioButton>
         <RadioButton
+            android:id="@+id/q12_group_b4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/q12_4"
             android:textSize="20sp"></RadioButton>
         <RadioButton
+            android:id="@+id/q12_group_b5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/q12_5"
