--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -192,4 +192,9 @@
             android:text="">
         </TextView>
     </LinearLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        ></Button>
 </LinearLayout></ScrollView>
