--- a/app/src/main/res/layout/welcome.xml
+++ b/app/src/main/res/layout/welcome.xml
@@ -89,18 +89,26 @@
         android:text="I accept these requests">
     </CheckBox>
 
-    <Button
-        android:id="@+id/wel_button"
-        android:background="@color/colorPrimary"
-        android:layout_width="1800dp"
-        android:layout_height="80dp"
-        android:layout_below="@id/wel_li_3"
-        android:layout_marginTop="140sp"
-        android:layout_marginLeft="25sp"
-        android:layout_marginRight="25sp"
-        android:text="Let's Start!"></Button>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <Button
+            android:id="@+id/wel_button"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+
+            android:layout_marginLeft="25sp"
+
+            android:layout_marginRight="25sp"
+            android:background="@color/colorPrimary"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="20dp"
+            android:text="Let's Start"
 
 
+            android:textSize="20sp"></Button>
+    </RelativeLayout>
 
     <!-- END    : Your code should be within this block -->
 </RelativeLayout>
