file storage done

--- a/app/src/main/res/layout/activity_report.xml
+++ b/app/src/main/res/layout/activity_report.xml
@@ -192,9 +192,24 @@
             android:text="">
         </TextView>
     </LinearLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <Button
+            android:id="@+id/download_button"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        ></Button>
+            android:layout_marginLeft="50dp"
+
+            android:layout_marginRight="50dp"
+            android:background="@color/colorPrimary"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="20dp"
+            android:text="DOWNLOAD"
+
+            android:textSize="20sp"></Button>
+    </RelativeLayout>
+
+
 </LinearLayout></ScrollView>
