--- a/app/src/main/res/layout-land-800x480/activity_main.xml
+++ b/app/src/main/res/layout-land-800x480/activity_main.xml
@@ -11,8 +11,7 @@
         android:id="@+id/linearlayout"
         android:layout_width="320dp"
         android:layout_height="500dp"
-        android:orientation="vertical"
-        android:layout_marginLeft="40dp">
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/textView2"
