--- a/app/src/main/res/layout-600x1024/activity_main.xml
+++ b/app/src/main/res/layout-600x1024/activity_main.xml
@@ -9,10 +9,10 @@
 
     <LinearLayout
         android:id="@+id/linearlayout"
-        android:layout_width="320dp"
+        android:layout_width="match_parent"
         android:layout_height="500dp"
-        android:orientation="vertical"
-        android:layout_marginLeft="40dp">
+        android:layout_marginLeft="40dp"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/textView2"
@@ -61,6 +61,8 @@
     <Button
         android:id="@+id/button"
         android:layout_width="match_parent"
+        android:layout_marginLeft="100dp"
+        android:layout_marginRight="100dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/linearlayout"
         android:background="#99008577"
