--- a/app/src/main/res/layout-land-1280x800/activity_main.xml
+++ b/app/src/main/res/layout-land-1280x800/activity_main.xml
@@ -12,7 +12,8 @@
         android:layout_width="320dp"
         android:layout_height="500dp"
         android:orientation="vertical"
-        android:layout_marginLeft="40dp">
+
+        android:layout_marginLeft="340dp">
 
         <TextView
             android:id="@+id/textView2"
@@ -66,7 +67,9 @@
         android:background="#99008577"
         android:onClick="goToSurvey"
         android:text="@string/start"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:layout_marginRight="300dp"
+        android:layout_marginLeft="300dp"/>
 
     <!-- END    : Your code should be within this block -->
 
