--- a/app/src/main/res/layout-land-800x480/activity_main.xml
+++ b/app/src/main/res/layout-land-800x480/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="320dp"
         android:layout_height="500dp"
         android:orientation="vertical"
-        android:layout_marginLeft="40dp">
+        android:layout_marginLeft="80dp">
 
         <TextView
             android:id="@+id/textView2"
@@ -27,10 +27,10 @@
             android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="40sp"
+            android:layout_marginBottom="0dp"
             android:text="@string/subtitle"
             android:textColor="#4D4A4A"
-            android:textSize="24sp" />
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/textView4"
@@ -38,22 +38,22 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="20sp"
             android:text="@string/p1"
-            android:textSize="20sp" />
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/textView5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="90sp"
+            android:paddingBottom="0sp"
             android:text="@string/should_know_list"
-            android:textSize="16sp" />
+            android:textSize="12sp" />
 
         <CheckBox
             android:id="@+id/accept"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginBottom="20sp"
+            android:layout_marginBottom="0sp"
             android:text="@string/maincheckbox" />
 
     </LinearLayout>
@@ -66,7 +66,8 @@
         android:background="#99008577"
         android:onClick="goToSurvey"
         android:text="@string/start"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:layout_marginTop="-60dp"/>
 
     <!-- END    : Your code should be within this block -->
 
